Dark mode color fix

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,7 +49,7 @@ html[data-theme='dark'] {
     --ifm-color-primary-light: #FFE7D9;
     --ifm-color-primary-lighter: #D1D2FF;
     --ifm-color-primary-lightest: #E8E8FF;
-    background-color: rgba(0, 1, 67, 0.3);
+    background-color: #0C0C20;
 }
 
 
